--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<p>Данная инструкция предназначена для разработки простых кроссплатформенных приложений под Windows, Linux и OS X. Она является результатом нескольких лет практики автора в его собственных проектах, поэтому если вы хотите использовать (или просто скомпилировать) один из них, вам следует начать с настройки окружения согласно этой инструкции.</p>
 		<div id="id_instruction"></div>
 		<script>
-			loadHTMLPart("id_instruction", "https://github.com/bigfatbrowncat/cross-building/raw/master/windows/instruction.ru.html-part", "<b>Error!!!</b>");
+			loadHTMLPart("id_instruction", "instruction.ru.html-part");
 		</script>
 
 <pre><code>$ cd your_repo_root/repo_name
