--- a/index.html
+++ b/index.html
@@ -9,25 +9,43 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <script src="javascripts/parts.js"></script>
+    <script src="javascripts/spin.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-  <script src="javascripts/parts.js"></script>
     <div>
 		<h1>Инструкция по настройке окружения от bigfatbrowncat</h1>
 		<p>Данная инструкция предназначена для разработки простых кроссплатформенных приложений под Windows, Linux и OS X. Она является результатом нескольких лет практики автора в его собственных проектах, поэтому если вы хотите использовать (или просто скомпилировать) один из них, вам следует начать с настройки окружения согласно этой инструкции.</p>
-		<div id="id_instruction"></div>
+		<div style="width: 100%" id="id_instruction">
+			<div style="width: 100%; height: 20pt" id="id_instruction_spinner"></div>
+		</div>
 		<script>
-			loadHTMLPart("id_instruction", "instruction.ru.html-part");
+			var opts = {
+			  lines: 9, // The number of lines to draw
+			  length: 2, // The length of each line
+			  width: 2, // The line thickness
+			  radius: 4, // The radius of the inner circle
+			  corners: 1, // Corner roundness (0..1)
+			  rotate: 0, // The rotation offset
+			  direction: 1, // 1: clockwise, -1: counterclockwise
+			  color: '#000', // #rgb or #rrggbb or array of colors
+			  speed: 2, // Rounds per second
+			  trail: 60, // Afterglow percentage
+			  shadow: false, // Whether to render a shadow
+			  hwaccel: false, // Whether to use hardware acceleration
+			  className: 'spinner', // The CSS class to assign to the spinner
+			  zIndex: 2e9, // The z-index (defaults to 2000000000)
+			  position: 'relative',
+			  top: '50%',           // center vertically
+			  left: '50%'          // center horizontally
+			};
+			var target = document.getElementById('id_instruction_spinner');
+			var spinner = new Spinner(opts).spin(target);
+			loadHTMLPart('id_instruction', 'instruction.ru.html-part');
 		</script>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
 
     </div>
     <script src="javascripts/scale.fix.js"></script>
