--- a/index.html
+++ b/index.html
@@ -16,38 +16,34 @@
     <![endif]-->
   </head>
   <body>
-    <div>
+	<div style="text-align: right; width: 100%;">
+	  <div class="toggle_buttons_panel">
+	    <div id="id_lang_en" class="toggle_button left" onclick="selectEnglish()">English</div><div id="id_lang_ru" class="toggle_button_active right" onclick="selectRussian()">Русский</div>
+		<script>
+		  function selectRussian() {
+		    document.getElementById("id_lang_en").className = "toggle_button left";
+		    document.getElementById("id_lang_ru").className = "toggle_button_active right";
+
+			loadHTMLPart('id_instruction', 'id_instruction_spinner', 'instruction.ru.html-part');
+		  }
+		  function selectEnglish() {
+		    document.getElementById("id_lang_en").className = "toggle_button_active left";
+		    document.getElementById("id_lang_ru").className = "toggle_button right";
+
+			loadHTMLPart('id_instruction', 'id_instruction_spinner', 'instruction.en.html-part');
+		  }
+		</script>
+	  </div>
+	</div>
+    <section>
 		<h1>Инструкция по настройке окружения от bigfatbrowncat</h1>
 		<p>Данная инструкция предназначена для разработки простых кроссплатформенных приложений под Windows, Linux и OS X. Она является результатом нескольких лет практики автора в его собственных проектах, поэтому если вы хотите использовать (или просто скомпилировать) один из них, вам следует начать с настройки окружения согласно этой инструкции.</p>
-		<div style="width: 100%" id="id_instruction">
-			<div style="width: 100%; height: 20pt" id="id_instruction_spinner"></div>
-		</div>
+		<div style="width: 100%" id="id_instruction"></div>
 		<script>
-			var opts = {
-			  lines: 9, // The number of lines to draw
-			  length: 2, // The length of each line
-			  width: 2, // The line thickness
-			  radius: 4, // The radius of the inner circle
-			  corners: 1, // Corner roundness (0..1)
-			  rotate: 0, // The rotation offset
-			  direction: 1, // 1: clockwise, -1: counterclockwise
-			  color: '#000', // #rgb or #rrggbb or array of colors
-			  speed: 2, // Rounds per second
-			  trail: 60, // Afterglow percentage
-			  shadow: false, // Whether to render a shadow
-			  hwaccel: false, // Whether to use hardware acceleration
-			  className: 'spinner', // The CSS class to assign to the spinner
-			  zIndex: 2e9, // The z-index (defaults to 2000000000)
-			  position: 'relative',
-			  top: '50%',           // center vertically
-			  left: '50%'          // center horizontally
-			};
-			var target = document.getElementById('id_instruction_spinner');
-			var spinner = new Spinner(opts).spin(target);
-			loadHTMLPart('id_instruction', 'instruction.ru.html-part');
+			loadHTMLPart('id_instruction', 'id_instruction_spinner', 'instruction.ru.html-part');
 		</script>
 
-    </div>
+    </section>
     <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
