--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		    document.getElementById("id_lang_en").className = "toggle_button left";
 		    document.getElementById("id_lang_ru").className = "toggle_button_active right";
 
-			loadHTMLPart('id_instruction', 'id_instruction_spinner', 'instruction.ru.html-part');
+			loadHTMLPart('id_instruction', 'instruction.ru.html-part');
 		  }
 		  function selectEnglish() {
 		    document.getElementById("id_lang_en").className = "toggle_button_active left";
 		    document.getElementById("id_lang_ru").className = "toggle_button right";
 
-			loadHTMLPart('id_instruction', 'id_instruction_spinner', 'instruction.en.html-part');
+			loadHTMLPart('id_instruction', 'instruction.en.html-part');
 		  }
 		</script>
 	  </div>
