--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <![endif]-->
   </head>
   <body>
+    <script>
+	  var lang = 'ru';
+	  var os = 'windows';
+	  
+	  function loadInstructionTitle() {
+	    loadHTMLPart('id_instruction_title', 'instruction-title.' + lang + '.html-part');
+	  }
+	  
+	  function loadInstruction() {
+	    loadHTMLPart('id_instruction', 'instruction.' + os + '.' + lang + '.html-part');
+	  }
+	</script>
 	<div style="text-align: right; width: 100%;">
 	  <div class="toggle_buttons_panel">
 	    <div id="id_lang_en" class="toggle_button left" onclick="selectEnglish()">English</div><div id="id_lang_ru" class="toggle_button_active right" onclick="selectRussian()">Русский</div>
@@ -24,15 +36,19 @@
 		    document.getElementById("id_lang_en").className = "toggle_button left";
 		    document.getElementById("id_lang_ru").className = "toggle_button_active right";
 
-			loadHTMLPart('id_instruction', 'instruction.ru.html-part');
-			loadHTMLPart('id_instruction_title', 'instruction-title.ru.html-part');
+			lang="ru";
+			
+			loadInstructionTitle();
+			loadInstruction();
 		  }
 		  function selectEnglish() {
 		    document.getElementById("id_lang_en").className = "toggle_button_active left";
 		    document.getElementById("id_lang_ru").className = "toggle_button right";
 
-			loadHTMLPart('id_instruction', 'instruction.en.html-part');
-			loadHTMLPart('id_instruction_title', 'instruction-title.en.html-part');
+			lang="en";
+			
+			loadInstructionTitle();
+			loadInstruction();
 		  }
 		</script>
 	  </div>
@@ -40,13 +56,50 @@
     <section>
 		<div style="width: 100%" id="id_instruction_title"></div>
 		<script>
-			loadHTMLPart('id_instruction_title', 'instruction-title.ru.html-part');
+			loadInstructionTitle();
 		</script>
+	</section>
+	<div style="text-align: right; width: 100%;">
+	  <div class="toggle_buttons_panel">
+	    <div id="id_os_win" class="toggle_button_active left" onclick="selectWindows()">Windows</div><div id="id_os_osx" class="toggle_button" onclick="selectOSX()">OS X</div><div id="id_os_linux" class="toggle_button right" onclick="selectLinux()">Linux</div>
+		<script>
+		  function selectWindows() {
+		    document.getElementById("id_os_win").className = "toggle_button_active left";
+		    document.getElementById("id_os_osx").className = "toggle_button";
+		    document.getElementById("id_os_linux").className = "toggle_button right";
+			
+			os="windows";
+			
+			loadInstruction();
+		  }
+
+		  function selectOSX() {
+		    document.getElementById("id_os_win").className = "toggle_button left";
+		    document.getElementById("id_os_osx").className = "toggle_button_active";
+		    document.getElementById("id_os_linux").className = "toggle_button right";
+
+			os="osx";
+			
+			loadInstruction();
+		  }
+
+		  function selectLinux() {
+		    document.getElementById("id_os_win").className = "toggle_button left";
+		    document.getElementById("id_os_osx").className = "toggle_button";
+		    document.getElementById("id_os_linux").className = "toggle_button_active right";
+
+			os="linux";
+			
+			loadInstruction();
+		  }
+		</script>
+	  </div>
+	</div>
+	<section>
 		<div style="width: 100%" id="id_instruction"></div>
 		<script>
-			loadHTMLPart('id_instruction', 'instruction.ru.html-part');
+			loadInstruction();
 		</script>
-
     </section>
     <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
