--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
   <body>
     <script>
 	
-	  var lang;
-	  if (window.navigator.language.search("ru") > -1 || navigator.language.search("ru") > -1) {
-	    lang = 'ru';
-	  } else {
-	    lang = 'en';
-	  }
-	  
+	  var lang = 'en';
 	  var os = 'windows';
 	  
 	  function loadInstructionTitle() {
@@ -64,9 +58,6 @@
 		  </div>
 		</div>
 		<div style="width: 100%" id="id_instruction_title"></div>
-		<script>
-			loadInstructionTitle();
-		</script>
 		<div style="text-align: right; width: 100%;">
 		  <div class="toggle_buttons_panel">
 			<div id="id_os_win" class="toggle_button_active left" onclick="selectWindows()">Windows</div><div id="id_os_osx" class="toggle_button" onclick="selectOSX()">OS X</div><div id="id_os_linux" class="toggle_button right" onclick="selectLinux()">Linux</div>
@@ -105,7 +96,11 @@
 		</div>
 		<div style="width: 100%" id="id_instruction"></div>
 		<script>
-			loadInstruction();
+			if (window.navigator.language.search("ru") > -1 || navigator.language.search("ru") > -1) {
+			  selectRussian();
+			} else {
+			  selectEnglish();
+			}
 		</script>
 	</section>
 	<script src="javascripts/scale.fix.js"></script>
