--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 	  }
 	  
 	  function initializeLanguage() {
-	 	if (window.navigator.language.search("ru") > -1 || navigator.language.search("ru") > -1) {
+	 	if ((window.navigator.language != undefined && window.navigator.language.search("ru") > -1) || 
+		    (navigator.language != undefined && navigator.language.search("ru") > -1)) {
 		  selectRussian();
 		} else {
 		  selectEnglish();
