--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	  }
 	</script>
   </head>
-  <body onload="initializeLanguage()">
+  <body>
 	<section>
 		<div style="text-align: right; width: 100%;">
 		  <div class="toggle_buttons_panel">
@@ -115,5 +115,8 @@
 		} catch(err) {}
 	</script>
 
+    <script type="text/javascript">
+      window.onload = initializeLanguage();
+    </script>
   </body>
 </html>
