--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	  
 	  function initializeLanguage() {
 	 	if ((window.navigator.language != undefined && window.navigator.language.search("ru") > -1) || 
-		    (navigator.userLanguage != undefined && navigator.language.search("ru") > -1)) {
+		    (navigator.userLanguage != undefined && navigator.userLanguage.search("ru") > -1)) {
 		  selectRussian();
 		} else {
 		  selectEnglish();
@@ -88,7 +88,7 @@
 	  }
 	</script>
   </head>
-  <body>
+  <body onload="initializeLanguage()">
 	<section>
 		<div style="text-align: right; width: 100%;">
 		  <div class="toggle_buttons_panel">
@@ -115,8 +115,5 @@
 		} catch(err) {}
 	</script>
 
-    <script type="text/javascript">
-      window.onload = initializeLanguage();
-    </script>
   </body>
 </html>
