--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
   </head>
   <body onload="initializeLanguage()">
 	<section>
-		<div style="text-align: right; width: 100%;">
+		<div class="toggle_buttons_block">
 		  <div class="toggle_buttons_panel">
 			<div id="id_lang_en" class="toggle_button left" onclick="selectEnglish()">English</div><div id="id_lang_ru" class="toggle_button_active right" onclick="selectRussian()">Русский</div>
 		  </div>
 		</div>
 		<div style="width: 100%" id="id_instruction_title"></div>
-		<div style="text-align: right; width: 100%;">
+		<div class="toggle_buttons_block">
 		  <div class="toggle_buttons_panel">
 			<div id="id_os_win" class="toggle_button_active left" onclick="selectWindows()">Windows</div><div id="id_os_osx" class="toggle_button" onclick="selectOSX()">OS X</div><div id="id_os_linux" class="toggle_button right" onclick="selectLinux()">Linux</div>
 		  </div>
